NGEOD-879 : Long dataset name issue & enhance "jumping" Table/Gantt buttons

--- a/css/home.less
+++ b/css/home.less
@@ -9,7 +9,7 @@
 @font-size: 14px;
 @header-height: 48px;
 
-@base-width: 1120px;
+@base-width: 1190px;
 
 /**
  * Main body definition (no longer needed because of jquery-mobile?)
